<resources>
    <string name="app_name">ParkStashMap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_book_a_spot">Book a Spot</string>
    <string name="navigation_list_a_spot">List a Spot</string>
    <string name="navigation_past_bookings">Past Bookings</string>
    <string name="navigation_payments">Payments</string>
    <string name="navigation_wallet">Wallet</string>
    <string name="navigation_profile">My Profile</string>
    <string name="navigation_ratings">Ratings</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_legal">Legal</string>
    <string name="navigation_logout">Logout</string>
</resources>
